--- a/app/globals.css
+++ b/app/globals.css
@@ -18,16 +18,57 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
+
+
+@keyframes gradient-shift {
+
+  0%,
+  100% {
+    background-position: 0% 50%;
+  }
+
+  25% {
+    background-position: 50% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  75% {
+    background-position: 50% 50%;
+  }
+}
+
+@keyframes shimmer {
+  0% {
+    opacity: 0.95;
+  }
+
+  100% {
+    opacity: 0.9;
+  }
+}
+
+.collect-bg {
+  background: linear-gradient(120deg, #000000, #070707, #030303, #080808fb, #0e0e0e);
+  background-size: 300% 300%;
+  animation: gradient-shift 8s infinite, shimmer 3s infinite alternate;
 }
